--- a/styles.css
+++ b/styles.css
@@ -140,20 +140,20 @@ cursor: pointer;
 }
 
 .header{
-  font-size: 3.25vw;
+  font-size: 2.5vw;
   display: flex;
   line-height:1;
   justify-content: space-between;
   padding: 1% 1% 1% 1%;
-  margin-bottom: 2.2vw;
+  margin-bottom: 1.6vw;
   /* border-bottom: 1.5px dotted var(--black); */
   line-height: 1;
 }
 
-.header span{
-  background-color: var(--color);
-  color: var(--background); 
+#click{
+  color: var(--background);
 }
+
 
 #headerone{
   background-color: var(--background); 
@@ -161,10 +161,35 @@ cursor: pointer;
 
 a{
   color: var(--color);
+
 }
 
 #nav{
   cursor: pointer;
+  color: var(--black);
+}
+
+#side{
+  display: inline-flex;
+}
+#nav{
+  padding-left: 1vw;
+}
+#archive{
+  text-decoration: none;
+  transition: .5s;
+  margin-right: .5vw;
+}
+
+#archive:hover{
+  filter: blur(7px);
+  background-color: var(--color);
+  color: var(--background);
+  text-decoration: underline;
+}
+
+#home-content{
+  transform: translateY(-.5vw);
 }
 
 .xaxis{
@@ -174,7 +199,7 @@ a{
   margin: 0 auto;
   justify-content: space-between;
   width: 91.5vw;
-  top:22.15vw;
+  top:21.65vw;
 }
 
 #print{
@@ -193,18 +218,18 @@ a{
   position: absolute;
   justify-content: center;
   text-align: center;
-  height: 48.2vw;
+  height: 50vw;
 }
 
 #branding{
   position:absolute;
   width: 100vw;
-  top:-1.1vw;
+  top:-1.5vw;
 }
 
 #personal{
   position:absolute;
-  bottom: 1.1vw;
+  bottom: 1.9vw;
   width: 100vw;
 }
 
@@ -220,20 +245,94 @@ a{
 }
 
 #graph{
-  height: 41.6vw;
+  height: 43.2vw;
   width:  76.8vw;
   display: grid;
   position: relative;
   margin: 0 auto;
   grid-template-columns: repeat(96, .8vw); 
-  grid-template-rows: repeat(52, .8vw);
+  grid-template-rows: repeat(54, .8vw);
   gap: 0px; /* Space between grid items */
-  margin-top: .5vw;
   opacity: 0;
   border: .5px solid var(--black);
   animation: opacity .5s forwards ease-in;
   animation-delay: 2s;
   z-index: 9;
+}
+
+.arrows{
+  display: flex;
+  justify-content: center;
+}
+
+#arrow1{
+  position: absolute;
+  z-index: 15;
+}
+
+#arrow2{
+  position: absolute;
+  transform: translateY(20.15vw);
+  z-index: 16;
+}
+
+#one{
+  transform: translateY(-1.4vw);
+  height: 0vw;
+  animation: growHeight 1.25s forwards;
+  animation-delay: .9s;
+}
+
+#two{
+width: 0vw;
+animation: growWidth 1.25s forwards;
+animation-delay: .9s;
+}
+
+#one2, #two2{
+display: none;
+}
+
+@keyframes growHeight {
+from {
+    height: 0;
+}
+to {
+    height: 46vw;
+}
+}
+
+@keyframes growHeight2 {
+from {
+    height: 0;
+}
+to {
+    height: 118.6vw;
+}
+}
+
+
+@keyframes growWidth {
+from {
+    width: 0;
+}
+to {
+    width: 79.8vw;
+}
+}
+
+@keyframes growWidth2 {
+from {
+    width: 0;
+}
+to {
+    width: 77vw;
+}
+}
+
+
+#key1{
+  padding-top: .5vw;
 }
 
 #key2{
@@ -270,7 +369,7 @@ white-space: nowrap;
 color: var(--black);
 justify-content: center;
 text-align: center;
-margin-left: 0.3vw;
+margin-left: 0.6vw;
 padding: .05vh .15vh .5vh .15vh;
 /* background-color: rgba(255, 0, 255, .75); */
 }
@@ -330,79 +429,9 @@ animation: opacityblur forwards 1s ease-in;
 animation-delay: 4s;
 }
 
-.arrows{
-  display: flex;
-  justify-content: center;
-}
-
-#arrow1{
-  position: absolute;
-  z-index: 15;
-  transform: translateY(-1vw);
-}
-
-#arrow2{
-  position: absolute;
-  transform: translateY(20.68vw);
-  z-index: 16;
-}
-
-#one{
-  height: 0vw;
-  animation: growHeight 1.25s forwards;
-  animation-delay: .9s;
-}
-
-#two{
-width: 0vw;
-animation: growWidth 1.25s forwards;
-animation-delay: .9s;
-}
-
-#one2, #two2{
-display: none;
-}
-
-@keyframes growHeight {
-from {
-    height: 0;
-}
-to {
-    height: 44.6vw;
-}
-}
-
-@keyframes growHeight2 {
-from {
-    height: 0;
-}
-to {
-    height: 118.6vw;
-}
-}
-
-
-@keyframes growWidth {
-from {
-    width: 0;
-}
-to {
-    width: 79.8vw;
-}
-}
-
-@keyframes growWidth2 {
-from {
-    width: 0;
-}
-to {
-    width: 77vw;
-}
-}
-
 .key{
 margin: 0.5% 1% 0.5% 1%;
-margin-top: 3vw;
+margin-top:3vw;
 display: inline-flex;
 font-size: .8vw;
 width: 98vw;
@@ -471,7 +500,7 @@ background-color: rgba(197, 197, 197, 0.6);
 
 #allnav a{
 text-decoration: none;
-background-color: var(--color);
+/* background-color: var(--color); */
 }
 
 
@@ -533,6 +562,7 @@ justify-content: flex-end;
 align-items: flex-end;
 pointer-events: none;
 margin: 1%;
+margin-right: 1.25%;
 z-index:50;
 }
 
@@ -547,8 +577,8 @@ position: relative;
 
 .arrow-container {
 position: relative;
-width: 4vw; /* Adjust the width as needed */
-height: 4vw; /* Adjust the height as needed */
+width: 3.5vw; /* Adjust the width as needed */
+height: 3.5vw; /* Adjust the height as needed */
 display: flex;
 z-index: 5;
 }
@@ -556,8 +586,8 @@ z-index: 5;
 
 .arrow-container2 {
 position: absolute;
-width: 4vw; /* Adjust the width as needed */
-height: 4vw; /* Adjust the height as needed */
+width: 3.5vw; /* Adjust the width as needed */
+height:3.5vw; /* Adjust the height as needed */
 display: flex;
 background-color: var(--color);
 filter: blur(3px);
@@ -633,7 +663,7 @@ transform: translateX(.75vw);
 #projnav{
 display: inline-flex;
 margin: 0 auto;
-margin-top: 0.25vw; 
+margin-top: 0vw; 
 }
 
 .projpoint {
@@ -642,8 +672,8 @@ height: .85vw;
 background-color: var(--color);
 cursor: pointer;
 display: inline-flex;
-margin-left: 3vw;
-margin-right: 3vw;
+margin-left: 2.25vw;
+margin-right: 2.25vw;
 transition: .5s;
 filter: blur(3px);
 }
@@ -835,11 +865,11 @@ display: flex;
 width: 82vw;
 justify-content: right;
 position: relative;
-margin-top: -10vw;
+margin-top: -12vw;
 }
 
 #newlogo{
-width: 33vw;
+width: 38vw;
 display: flex;
 }
 
@@ -907,7 +937,7 @@ top: 0;
 width: 98vw; 
 background-color: rgba(197, 197, 197, 0.7); 
 z-index: 100; 
-font-size: 1.9vw;
+font-size: 1.5vw;
 margin-bottom: 0;
 padding-bottom: .5vw;
 transition: .5s;
@@ -1037,20 +1067,27 @@ margin-top: 0vw;
 #click1, #nav, #allnav>a, #click2{
 transition: .5s;
 }
-
 #click1:hover{
 /* color: var(--background); */
 filter:blur(7px);
 }
 #nav:hover{
-/* color: var(--background); */
 filter:blur(7px);
+}
+
+#nav span:hover{
+  color: var(--background);
+  background-color: var(--color);
+  text-decoration: underline;
 }
 #click2:hover{
 /* color: var(--black); */
 filter:blur(7px);
 }
 #allnav >a:hover{
+  background-color: var(--color);
+  color: var(--background);
+  text-decoration: underline;
 /* color: var(--black); */
 filter:blur(7px);
 }
@@ -1102,12 +1139,12 @@ to {
 
 @media only screen and (max-height: 800px){
 #home-content{
-  transform: scale(.9);
-  margin-top: -2.5vw;
+  transform: scale(.96);
+  margin-top: -2vw;
 }
 
 .key{
-  margin-top: 0;
+  margin-top: 2vw;
 }
 }
 
@@ -1453,37 +1490,35 @@ overflow-y: scroll!important;
 }
 
 .arrowsholder {
+position: relative;
 opacity: 0;
 transition: .5s;
-top: .5%;
 right: 0vw;
-left: 40vw;
+left: 0vw;
 justify-content: center;
 align-items: flex-start;
-margin: 1%;
+top: -10vw;
 z-index: 500;
+transform: scale(2);
 }
 
-.arrow-container{
-width: 10vw; /* Adjust the width as needed */
-height: 10vw; /* Adjust the height as needed */
+.arrow-container2{
+  filter: blur(1px);
 }
 
-.arrow-container2 {
-width: 8vw; /* Adjust the width as needed */
-height: 8vw; /* Adjust the height as needed */
-filter: blur(1.5px);
+.info{
+  width: 97%;
 }
 
-.arrowsvert{
-width: 4vw;
+.logo{
+  display: none;
 }
 
-.arrowshor{
-height: 4vw;
+.caption{
+  margin-top: 5vw;
 }
 
-.footer{
-height: 9vw;
+.subcaption{
+  margin-bottom: 5vw;
 }
 }
