--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body{
 }
 
 #home{
-  transition: 1s;
+  transition: .5s;
   height: 100vh;
   z-index: 100;
   width: 100vw;
@@ -75,7 +75,7 @@ body{
 }
 
 .skill-text{
-transition: .5s;
+transition: .25s;
 }
 
 #about {
@@ -95,7 +95,7 @@ transition: .5s;
   opacity: 0;
   display: none;
   color: var(--color);
-  transition: .5s!important;
+  transition: .25s!important;
 }
 
 .click{
@@ -139,6 +139,15 @@ background-color: var(--color);
 cursor: pointer;
 }
 
+.bracket{
+  position: relative;
+  top: -.17rem;
+}
+.bracket1{
+  position: relative;
+  top: -.17rem;
+}
+
 .header{
   font-size: 2.5vw;
   display: flex;
@@ -160,15 +169,15 @@ cursor: pointer;
 }
 
 a{
-  color: var(--color);
-
+  /* color: var(--color); */
 }
 
 #nav{
   cursor: pointer;
+}
+ a{
   color: var(--black);
 }
-
 #side{
   display: inline-flex;
 }
@@ -177,8 +186,14 @@ a{
 }
 #archive{
   text-decoration: none;
-  transition: .5s;
+  transition: .25s;
   margin-right: .5vw;
+}
+
+#archive1{
+  text-decoration: none;
+  transition: .25s;
+  margin-right: -.5vw;
 }
 
 #archive:hover{
@@ -186,6 +201,13 @@ a{
   background-color: var(--color);
   color: var(--background);
   text-decoration: underline;
+}
+
+#archive1:hover{
+  text-decoration: underline;
+  filter: blur(7px);
+  background-color: var(--black);
+  color: var(--background);
 }
 
 #home-content{
@@ -364,7 +386,7 @@ font-size: 1.2vw;
 text-transform: uppercase;
 visibility: hidden;
 opacity:0;
-transition: 1s;
+transition: .5s;
 white-space: nowrap;
 color: var(--black);
 justify-content: center;
@@ -390,7 +412,7 @@ animation-delay: 4.5s;
 #pointC-point{
 opacity:0;
 animation: opacityblur forwards 1s ease-in;
-animation-delay: 3.75s;
+animation-delay: 2.75s;
 }
 
 #pointD-point{
@@ -402,25 +424,25 @@ animation-delay: 3.25s;
 #pointE-point{
 opacity:0;
 animation: opacityblur forwards 1s ease-in;
-animation-delay: 3s;
+animation-delay: 3.5s;
 }
 
 #pointF-point{
 opacity:0;
 animation: opacityblur forwards 1s ease-in;
-animation-delay: 2.75s;
+animation-delay: 3.75s;
 }
-
+/* 
 #pointG-point{
 opacity:0;
 animation: opacityblur forwards 1s ease-in;
 animation-delay: 4.25s;
-}
+} */
 
 #pointH-point{
 opacity:0;
 animation: opacityblur forwards 1s ease-in;
-animation-delay: 3.5s;
+animation-delay: 3s;
 }
 
 #pointI-point{
@@ -428,6 +450,12 @@ opacity:0;
 animation: opacityblur forwards 1s ease-in;
 animation-delay: 4s;
 }
+
+#pointJ-point{
+  opacity:0;
+  animation: opacityblur forwards 1s ease-in;
+  animation-delay: 4.25s;
+  }
 
 .key{
 margin: 0.5% 1% 0.5% 1%;
@@ -442,6 +470,12 @@ color: var(--color)
 #key{
 padding: .05% .35% .05% .35%;
 border: .2px solid var(--black);
+}
+
+#index{
+  background-color: var(--black);
+  color: var(--background);
+  text-decoration: none;
 }
 
 #projects-section{
@@ -521,7 +555,7 @@ line-height: 1;
 z-index: 101;
 opacity: 0;
 display: none;
-transition: .5s!important;
+transition: .25s!important;
 }
 
 #about2 .linkpoints{
@@ -555,7 +589,7 @@ display: flex;
 position: fixed;
 visibility: hidden;
 opacity: 0;
-transition: .5s;
+transition: .25s;
 bottom: .75%;
 right: 0;
 justify-content: flex-end;
@@ -674,7 +708,7 @@ cursor: pointer;
 display: inline-flex;
 margin-left: 2.25vw;
 margin-right: 2.25vw;
-transition: .5s;
+transition: .25s;
 filter: blur(3px);
 }
 
@@ -695,7 +729,7 @@ filter: blur(0px);
 }
 
 .info a{
-transition: .5s;
+transition: .25s;
 color: var(--color);
 background-color: var(--color);
 color: var(--background);
@@ -711,7 +745,7 @@ cursor: alias;
 
 
 .first, .background{
-transition: .5s;
+transition: .25s;
 }
 
 .first:hover{
@@ -759,6 +793,11 @@ margin-right: .3vw;
 background-color: var(--color);
 cursor: pointer;
 /* transform: translate(-50%, -50%); */
+}
+
+.count{
+  color: var(--color);
+  font-size: 2.25vw;
 }
 
 .subtitle{
@@ -834,7 +873,7 @@ background-color: var(--color);
 /* display: none; */
 /* opacity: 0; */
 width: 50%;
-transition: 1s;
+transition: .5s;
 }
 
 .reveal-info{
@@ -940,7 +979,7 @@ z-index: 100;
 font-size: 1.5vw;
 margin-bottom: 0;
 padding-bottom: .5vw;
-transition: .5s;
+transition: .25s;
 /* padding-top:.5vw; */
 }
 
@@ -1048,7 +1087,7 @@ font-size: 1.25vw;
 cursor: pointer;
 margin-top: 1vw;
 margin-bottom: 1vw;
-transition: .5s;
+transition: .25s;
 text-decoration: underline;
 }
 
@@ -1065,7 +1104,7 @@ margin-top: 0vw;
 }
 
 #click1, #nav, #allnav>a, #click2{
-transition: .5s;
+transition: .25s;
 }
 #click1:hover{
 /* color: var(--background); */
@@ -1080,6 +1119,7 @@ filter:blur(7px);
   background-color: var(--color);
   text-decoration: underline;
 }
+
 #click2:hover{
 /* color: var(--black); */
 filter:blur(7px);
@@ -1100,7 +1140,7 @@ position: fixed;
 background: rgb(200,200,200);
 background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(200,200,200,.5) 90%, rgba(200,200,200,1) 100%);
 bottom:0;
-transition: .5s;
+transition: .25s;
 visibility: hidden;
 }
 
@@ -1151,13 +1191,17 @@ to {
 @media only screen and (max-width: 700px){
 
 .header{
-  font-size: 7.75vw;
-  /* line-height:1;
-  justify-content: space-between;
+  font-size: 9vw;
+  line-height:1.3;
+  /*justify-content: space-between;
   padding: 0.4% 1% 1% 1%;
   margin-bottom: 2.2vw; */
   border-bottom: none;
   padding:0;
+}
+
+#archive1{
+display: none;
 }
 
 #headerone{
@@ -1180,18 +1224,30 @@ to {
 
 
 #nav{
- display: block;
+ display: flex;
  border-top: 1px dotted var(--background);
  position: absolute;
  bottom:3.5vw;
- width: 100vw;
+ left:0;
+ right: 0;
+ width: 90vw;
  padding-top:2.7vw;
-padding-bottom: 20.5vw; 
+  padding-bottom: 20.5vw;
+  margin: 0 auto;
+  justify-content: center; 
+}
+
+.count{
+  font-size: 8vw;
+}
+
+#home{
+ overflow-x: hidden;
 }
 
 #home-content{
   position: absolute;
-  top: 45vh;
+  top: 49vh;
   left: 50vw;
   transform: translate(-50%, -50%);
 }
@@ -1295,7 +1351,7 @@ padding-bottom: 20.5vw;
 
   .key {
     position: absolute;
-    top: 17vw;
+    top: 34vw;
     left: 50%;
     transform: translateX(-50%);
     width: 95vw;
@@ -1314,10 +1370,10 @@ padding-bottom: 20.5vw;
 }
 
 #headertwo{
-  padding-top: 3vw;
+  padding-top: 1.5vw;
   padding-left:.75vw;
   padding-right:.75vw;
-  font-size: 7vw;
+  font-size: 8.5vw;
   padding-bottom: 4vw;
 }
 
@@ -1332,7 +1388,6 @@ padding-bottom: 20.5vw;
   overflow-x: scroll;
 }
 
-
 .box{
   margin-top: 0vw;
   padding-top:19vw;
@@ -1342,12 +1397,12 @@ padding-bottom: 20.5vw;
 }
 
 .box * {
-  transition: .5s; 
+  transition: .25s; 
 }
 
 .subbox{
   border: 1px dotted var(--background);
-  transition: .5s;
+  transition: .25s;
 }
 .first{
   width: 98%;
@@ -1490,16 +1545,7 @@ overflow-y: scroll!important;
 }
 
 .arrowsholder {
-position: relative;
-opacity: 0;
-transition: .5s;
-right: 0vw;
-left: 0vw;
-justify-content: center;
-align-items: flex-start;
-top: -10vw;
-z-index: 500;
-transform: scale(2);
+display: none;
 }
 
 .arrow-container2{
