--- a/archive/styles.css
+++ b/archive/styles.css
@@ -265,6 +265,24 @@ pointer-events: none;
 animation: opacityblur forwards .75s ease-in;
 }
 
+/* .tooltiptext {
+  visibility: hidden;
+  width: 50px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 0;
+  position: absolute;
+  font-size: 1vw;
+  z-index: 1;
+  text-decoration: none;
+}
+
+.projpoints:hover .tooltiptext {
+  visibility: visible;
+} */
+
 .copyright{
   display: block;
   margin-bottom:2vw;
