--- a/archive/styles.css
+++ b/archive/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "PP Rader";
-    src: local("PP Rader"), url("PP Rader/PPRader-Regular.otf") format("opentype");
+    src: local("PP Rader"), url("../PP Rader/PPRader-Regular.otf") format("opentype");
 }
 
 :root {
