--- a/styles.css
+++ b/styles.css
@@ -1212,14 +1212,16 @@ to {
 }
 
 
-@media only screen and (max-height: 800px){
+@media only screen and (max-height: 850px){
 #home-content{
-  transform: scale(.96);
+  transform: scale(.9);
   margin-top: -2vw;
 }
 
 .key{
-  margin-top: 2vw;
+  position: relative;
+  top: -.5vw;
+  margin-top: -1vw;
 }
 }
 
