--- a/styles.css
+++ b/styles.css
@@ -493,6 +493,10 @@ color: var(--background);
 margin-top:0;
 }
 
+.border{
+  border-radius: .75vw;
+}
+
 #allprojects{
 /* padding: 1% 1.5% 1% 1.5%; */
 /* padding: 1% 1% 1% 1%; */
