--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 :root {
   --color: #ed26ff;
-  --background: #404040;
+  --background: rgb(64, 64, 64);
   --black: #c8c8c8;
 }
 
@@ -166,7 +166,8 @@ cursor: pointer;
 
 
 #headerone{
-  background-color: var(--background); 
+  /* background-color: var(--background);  */
+  z-index: -2;
 }
 
 a{
@@ -257,7 +258,7 @@ a{
 }
 
 .label{
-  background-color: var(--color);
+  background-color: var(--black);
   color: var(--background);
   padding-left: .1vw;
   padding-right: .1vw;
@@ -281,6 +282,7 @@ a{
   animation: opacity .5s forwards ease-in;
   animation-delay: 2s;
   z-index: 9;
+  background-color: rgba(64,64,64, .75);
 }
 
 .arrows{
@@ -351,16 +353,6 @@ from {
 to {
     width: 77vw;
 }
-}
-
-
-#key1{
-  padding-top: .5vw;
-}
-
-#key2{
-animation: opacityblur 1.75s alternate-reverse ease infinite;
-animation-delay: 4s;
 }
 
 .grid-line {
@@ -471,6 +463,19 @@ color: var(--color)
 #key{
 padding: .05% .35% .05% .35%;
 border: .2px solid var(--black);
+}
+
+#key2{
+  background-color: var(--color);
+  padding: .05% .3% .05% .3%;
+  color: var(--background);
+  /* opacity: 0; */
+  animation: opacityblur 1.75s alternate-reverse ease infinite;
+  animation-delay: 0s;
+}
+
+#key1{
+  padding-top: .5vw;
 }
 
 #index{
@@ -756,6 +761,17 @@ pointer-events: none;
 animation: opacityblur forwards .75s ease-in;
 }
 
+
+.homeprojpoints {
+  width:  1.2vw;
+  height: 1.2vw;
+  background-color: var(--color);
+  transition: .3s;
+  filter: blur(4px);
+  pointer-events: none;
+  animation: opacityblur forwards .75s ease-in;
+  }
+  
 
 .scale-up{
 width: 1.2vw;
@@ -1243,7 +1259,7 @@ to {
 
 .header{
   font-size: 9vw;
-  line-height:1.3;
+  line-height:1.35;
   /*justify-content: space-between;
   padding: 0.4% 1% 1% 1%;
   margin-bottom: 2.2vw; */
@@ -1461,6 +1477,11 @@ display: none;
 
 .fullwidth{
   width: 82.25vw;
+  /* margin-top: 1vw; */
+}
+
+#illustrations{
+  margin-top:-4vh;
 }
 
 .titlepoint{
@@ -1478,6 +1499,7 @@ display: none;
   text-align: left;
   margin-bottom: 1vw;
   margin-left: 1vw;
+  line-height: 1.1;
 }
 
 .subtitle{
@@ -1597,11 +1619,33 @@ overflow-y: scroll!important;
 }
 
 .arrowsholder {
-display: none;
+  top: -88.75%;
 }
 
+.arrow-container {
+  width: 11vw; /* Adjust the width as needed */
+  height: 11vw; /* Adjust the height as needed */
+  }
+  
+  .arrow-container2 {
+  width: 11vw; /* Adjust the width as needed */
+  height:11vw; /* Adjust the height as needed */
+  }
+  
+  .arrowsvert {
+  height: 7vw;
+  }
+  
+  .leftright{ 
+  width: 5vw;
+  }
+  
+  .arrowshor {
+  height: 4vw;
+  }
+
 .arrow-container2{
-  filter: blur(1px);
+  filter: blur(2px);
 }
 
 .info{
