--- a/styles.css
+++ b/styles.css
@@ -1275,6 +1275,15 @@ to {
 }
 }
 
+@media only screen and (max-width: 1100px){
+  #home-content{
+  position: absolute;
+  top: 49vh;
+  left: 50vw;
+  transform: translate(-50%, -50%) scale(.96);
+  }
+}
+
 @media only screen and (max-width: 700px){
 
 .header{
