--- a/styles.css
+++ b/styles.css
@@ -1773,7 +1773,9 @@ overflow-y: scroll!important;
 @media only screen and (max-width: 500px){
 
   body{
+    overflow: scroll;
     overflow-y: scroll!important;
+    height: auto;
   }
 
   .header{
