--- a/archive/styles.css
+++ b/archive/styles.css
@@ -318,13 +318,24 @@ to {
 }
 }
 
+@media only screen and (max-width: 800px){
+
+  .header{
+    font-size: 4vw;
+    line-height:1.35;
+    border-bottom: none;
+    padding:0;
+  }
+}
+
 
 @media only screen and (max-width: 700px){
 
+ 
   .header{
-    font-size: 8.5vw;
-    /* line-height:1;
-    justify-content: space-between;
+    font-size: 6.5vw;
+    line-height:1.35;
+    /*justify-content: space-between;
     padding: 0.4% 1% 1% 1%;
     margin-bottom: 2.2vw; */
     border-bottom: none;
@@ -335,7 +346,6 @@ to {
     padding-top: 2vw;
     padding-left:.75vw;
     padding-right:.75vw;
-    font-size: 8.5vw;
     padding-bottom: 4vw;
   }
 
@@ -350,3 +360,19 @@ to {
     text-align: center;
   }
 }
+
+@media only screen and (max-width: 450px){
+
+  .header{
+    font-size: 9vw;
+    line-height:1.35;
+    /*justify-content: space-between;
+    padding: 0.4% 1% 1% 1%;
+    margin-bottom: 2.2vw; */
+    border-bottom: none;
+    padding:0;
+  }
+}
+
+
+  
