--- a/styles.css
+++ b/styles.css
@@ -2268,7 +2268,7 @@ overflow-y: scroll!important;
    right: 0;
    width: 90vw;
    padding-top:2.7vw;
-    /* padding-bottom: 20.5vw; */
+    padding-bottom: 20.5vw;
     margin: 0 auto;
   }
   
@@ -2281,12 +2281,12 @@ overflow-y: scroll!important;
   
 }
 
-/* 
+
 @media only screen and (max-height: 650px){
 
   #home-content{
     position: absolute;
-    top: 54vh;
+    top: 59vh;
     left: 50vw;
     transform: translate(-50%, -50%) scale(.91);
   }
@@ -2299,4 +2299,4 @@ overflow-y: scroll!important;
     padding-top:16vw;
      padding-bottom: 3vw;
    }
-  } */
+  }
