--- a/styles.css
+++ b/styles.css
@@ -2256,7 +2256,7 @@ overflow-y: scroll!important;
   }
 }
 
-@media only screen and (max-width: 400px){
+/* @media only screen and (max-width: 400px){
   
   
   #side{
@@ -2279,7 +2279,7 @@ overflow-y: scroll!important;
     transform: translate(-50%, -50%) scale(.91);
   }
   
-}
+} */
 
 /* 
 @media only screen and (max-height: 663px){
