--- a/styles.css
+++ b/styles.css
@@ -2256,10 +2256,10 @@ overflow-y: scroll!important;
   }
 }
 
-/* @media only screen and (max-width: 400px){
+@media only screen and (max-width: 399px){
   
   
-  #side{
+  /* #side{
    display: inline-flex;
    border-top: 1px dotted var(--background);
    position: absolute;
@@ -2270,16 +2270,17 @@ overflow-y: scroll!important;
    padding-top:2.7vw;
     padding-bottom: 2vw;
     margin: 0 auto;
-  }
+  } */
   
   #home-content{
-    position: absolute;
+    /* position: absolute;
     top: 53vh;
     left: 50vw;
-    transform: translate(-50%, -50%) scale(.91);
+    transform: translate(-50%, -50%) scale(.91); */
+    display: none;
   }
   
-} */
+}
 
 /* 
 @media only screen and (max-height: 663px){
