--- a/styles.css
+++ b/styles.css
@@ -2263,7 +2263,7 @@ overflow-y: scroll!important;
    display: inline-flex;
    border-top: 1px dotted var(--background);
    position: relative;
-   top:90%;
+   top:630px;
    left:0;
    right: 0;
    width: 90vw;
