--- a/styles.css
+++ b/styles.css
@@ -1087,6 +1087,16 @@ transition: .25s;
   /* padding-top:.5vw; */
   }
 
+.fixed3{
+  position: fixed!important;
+  top: 0;
+  background-color: rgba(197, 197, 197, 0.7); 
+  z-index: 100; 
+  width: 98.5vw;
+  margin-bottom: 6vw;
+  transition: .25s;
+}
+
 #chamberlain-web{
 margin-top: 0vw;
 }
