--- a/archive/styles.css
+++ b/archive/styles.css
@@ -84,7 +84,17 @@ body {
       background-color: var(--color);
       cursor: pointer;
       }
-
+      
+      .fixed3{
+        position: fixed!important;
+        top: 0;
+        background-color: rgba(197, 197, 197, 0.7); 
+        z-index: 100; 
+        width: 98.5vw;
+        margin-bottom: 6vw;
+        transition: .25s;
+      }
+      
 
 .header{
     font-size: 2.5vw;
